# compfin-assignment-2

./: README.md  pyproject.toml  ruff.toml
src/compfin_assignment_2/: __init__.py
src/compfin_assignment_2/asian_option/geom_brownian_model/: __init__.py  option_price_sim.py  option_pricing_analytic.py
src/compfin_assignment_2/asian_option/geom_brownian_model/option_pricing/: __init__.py
src/compfin_assignment_2/asian_option/heston_model/: __init__.py  asian_option_sim.py  benchmarks.py  model_settings.py
src/compfin_assignment_2/asian_option/heston_model/numerical_method/: __init__.py  numerical_schemes.py
src/compfin_assignment_2/asian_option/heston_model/option_pricing/: __init__.py  analytic.py  control_variates.py  option_pricing_analytic.py  option_pricing_sim.py
src/compfin_assignment_2/cli/: __init__.py
src/compfin_assignment_2/cli/asian_option/: __init__.py
src/compfin_assignment_2/cli/asian_option/heston_model/: __init__.py  asian_pricing.py  control_variate_pricing.py  control_vs_heston_stat.py  gbm_vol_vs_control_var.py  sim_trajectory.py  (+1 more)
src/compfin_assignment_2/heston_model/: __init__.py  data_validation.py  model_settings.py  simulation.py
src/compfin_assignment_2/heston_model/num_methods/: __init__.py  euler_scheme.py  numerical_schemes.py
src/compfin_assignment_2/heston_model/numerical_method/: __init__.py  numerical_schemes.py
src/compfin_assignment_2/utils/: __init__.py  commons.py  validation.py
src/compfin_assignment_2/weather_market/: .cache.sqlite  data_analysis.py  data_retrieval.py  model.py  simulation.py  test.py
(+4 files in other folders)
