[project]
name = "compfin-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]

[project.scripts]
compfin-assignment-2 = "compfin_assignment_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
