[project]
name = "compfin-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
    "tqdm>=4.67.1",
]

[project.scripts]
compfin-assignment-2 = "compfin_assignment_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
