[project]
name = "compfin-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "ruff>=0.11.8",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "typer>=0.15.3",
]

[project.scripts]
compfin = "compfin_assignment_2.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
